# simplejit-demo

./: .gitignore  .rustfmt.toml  Cargo.toml
.cargo/: config.toml
.github/workflows/: test.yml
benches/: bench.rs
src/: ast.rs  database.rs  frontend.rs  intern.rs  jit.rs  lib.rs  lower.rs  parse.rs  pretty.rs  source.rs  target.rs  tests.rs  type_ck.rs  unify.rs
src/ast/: binding.rs  expr.rs  item.rs  mod.rs  ty.rs  ty_binding.rs
tests/: foo.txt  foo_ir.txt  foo_pretty.txt  hello.txt  hello_ir.txt  hello_pretty.txt  iterative_fib.txt  iterative_fib_ir.txt  iterative_fib_pretty.txt  jit_tests.rs  recursive_fib.txt  recursive_fib_ir.txt  recursive_fib_pretty.txt  simple_struct.txt  simple_struct_ir.txt  simple_struct_pretty.txt  string.txt  string_ir.txt  string_pretty.txt  struct_function.txt  struct_function_ir.txt  struct_function_pretty.txt  wrong_variable_type.txt  wrong_variable_type_stderr.txt
