[package]
name = "simplejit-demo"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/CraneStation/simplejit-demo"
description = "Toy language implemented using cranelift-simplejit"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = "1"
cranelift = { version = "0.68", git = "https://github.com/1tgr/wasmtime", branch = "main" }
cranelift-module = { version = "0.68", git = "https://github.com/1tgr/wasmtime", branch = "main" }
cranelift-simplejit = { version = "0.68", git = "https://github.com/1tgr/wasmtime", branch = "main" }
derive_more = "0.99"
im-rc = "15"
itertools = "0.9"
object-pool = "0.5"
peg = "0.6"
salsa = { version = "0.16", git = "https://github.com/1tgr/salsa" }

[dev-dependencies]
criterion = "0.3"
